# opencluster

./: .gitignore  CMakeLists.txt  README.md
apps/can_simulator/: main.c
apps/display_node/: main.c
config/desktop/: lv_conf.h
core/: can_protocol.h  e46_can_protocol.h  layout.c  layout.h  skin.h  skin_registry.c  skin_registry.h  vehicle_data.c  vehicle_data.h
docs/: AGENTS.md  ARCHITECTURE.md  CLUSTER_BUS_SPEC.md  E46_CAN_BUS.md
hal/desktop/: hal_can_udp.c  hal_display_sdl.c  hal_input_sdl.c  hal_platform_posix.c
hal/include/: hal_can.h  hal_display.h  hal_input.h  hal_platform.h
hardware/: README.md
hardware/esp32p4-automotive/: README.md  esp32p4-automotive.kicad_pcb  esp32p4-automotive.kicad_pro  esp32p4-automotive.kicad_sch  esp32p4-automotive.kicad_sym
hardware/esp32p4-display-adapter/: README.md  esp32p4-display-adapter.kicad_pcb  esp32p4-display-adapter.kicad_pro  esp32p4-display-adapter.kicad_sch
hardware/esp32p4-display-adapter-15pin/: README.md  esp32p4-display-adapter-15pin.kicad_pcb  esp32p4-display-adapter-15pin.kicad_pro  esp32p4-display-adapter-15pin.kicad_sch  esp32p4-display-adapter.kicad_pcb  esp32p4-display-adapter.kicad_sch
hardware/esp32p4-display-adapter-22pin/: README.md  esp32p4-display-adapter-22pin.kicad_pcb  esp32p4-display-adapter-22pin.kicad_pro  esp32p4-display-adapter-22pin.kicad_sch
hardware/rpi-display-adapter/: README.md  rpi-display-adapter.kicad_pcb  rpi-display-adapter.kicad_pro  rpi-display-adapter.kicad_sch
skins/coolant_temp/: skin_coolant_temp.c
skins/e46/: e46_common.h  e46_coolant.c  e46_fuel.c  e46_speedometer.c  e46_tachometer.c
skins/fuel_gauge/: skin_fuel_gauge.c
skins/speedometer/: skin_speedometer.c
skins/tachometer/: skin_tachometer.c
